--- a/.config/helix/config.toml
+++ b/.config/helix/config.toml
@@ -27,25 +27,32 @@ enable = true
 [editor.inline-diagnostics]
 cursor-line = "error"
 
-# [[language]]
-# name = "rust"
-
-# [language.auto-pairs]
-# '(' = ')'
-# '{' = '}'
-# '[' = ']'
-# '"' = '"'
-# '`' = '`'
-# '<' = '>'
-#
-
 [keys.normal]
+"C-." = "repeat_last_motion"
 tab = "move_parent_node_end"
 S-tab = "move_parent_node_start"
+S-h = "goto_previous_buffer"
+S-l = "goto_next_buffer"
+C-h = "jump_view_left"
+C-j = "jump_view_down"
+C-k = "jump_view_up"
+C-l = "jump_view_right"
 
 [keys.insert]
 S-tab = "move_parent_node_start"
+C-space = "completion"
 
 [keys.select]
 tab = "extend_parent_node_end"
 S-tab = "extend_parent_node_start"
+
+[keys.normal.g]
+h = "goto_first_nonwhitespace"
+S-h = "goto_line_start"
+s = "goto_line_start"
+j = "goto_word"
+
+[keys.normal.space]
+space = "file_picker"
+# Print the current line's git blame information to the statusline.
+S-b = ":echo %sh{git blame -L %{cursor_line},+1 %{buffer_name}}"
